initial implementation of example system data channels