@@ -1,5 +1,6 @@
 package org.palladiosimulator.indirections.scheduler.data;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -7,11 +8,17 @@ import org.palladiosimulator.indirections.interfaces.IndirectionDate;
 import org.palladiosimulator.indirections.scheduler.operators.Emitters.Window;
 
 public class WindowingIndirectionDate<T extends IndirectionDate> extends ConcreteGroupingIndirectionDate<T> {
-    private final Window window;
+    public final Window window;
+
+    public WindowingIndirectionDate(final List<T> dataInGroup, final Window window,
+            final Map<String, Object> extraData) {
+        super(dataInGroup, Map.of("WINDOW.VALUE", window));
+        this.extraData.putAll(extraData);
+        this.window = window;
+    }
 
     public WindowingIndirectionDate(final List<T> dataInGroup, final Window window) {
-        super(dataInGroup, Map.of("WINDOW.VALUE", window));
-        this.window = window;
+        this(dataInGroup, window, Collections.emptyMap());
     }
 
     @Override
